examples/type_system/failing/138_match_scrutinee_constraint_propagates.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let x = mystery_value
    let y: String = match x {
        Some(n) -> n,
        None -> 0,
    }
}
